# pnwater

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/: anomaly_model.joblib  metrics.json
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/dashboards/json/: pnwater.json
scripts/: architecture_diagram.py
src/pnwater/: config.py  migrate.py  rivers.py
src/pnwater/messaging/: __init__.py  kafka_client.py  topics.py
src/pnwater/ml/: dataset.py  features.py  train.py
src/pnwater/models/: schemas.py
src/pnwater/services/alert_agent/: graph.py  llm.py  main.py
src/pnwater/services/anomaly_detector/: detector.py  main.py
src/pnwater/services/api/: main.py
src/pnwater/services/ingest/: main.py
src/pnwater/services/simulator/: generator.py  main.py
src/pnwater/storage/: db.py  orm.py  repository.py
tests/: conftest.py  test_api.py  test_dataset.py  test_detector.py  test_features.py  test_generator.py  test_graph.py  test_ingest.py  test_repository.py  test_rivers.py
