[project]
name = "pnwater"
version = "0.1.0"
description = "Real-time Pacific Northwest river water quality monitoring"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "aiokafka>=0.11",
  "prometheus-client>=0.21",
  "xgboost>=2.1",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "joblib>=1.4",
  "langgraph>=0.2",
  "langchain-google-genai>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
